--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch
 
 permissions:
-  contents: write|read
+  contents: read-all|write-all
   pages: write
   id-token: write
   
