--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,12 @@ jobs:
           cd scripts
           npm install
           npm run build
+      - name: Sanity check
+        run: |
+          cd scripts
+          cd build
+          pwd
+          ls
       - name: Run local action
         uses: ./actions/fetch-database
       - name: Checkout database repo
