--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,11 @@ jobs:
           ls
       - name: Run local action
         uses: ./actions/fetch-database
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: database-artifact
+          path: database.json
 
   build:
     name: Build
@@ -47,6 +52,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: database-artifact
+          path: src
       - name: Detect package manager
         id: detect-package-manager
         run: |
