--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,16 @@ jobs:
           npm run build
       - name: Run local action
         uses: ./actions/fetch-database
+      - name: die
+        run: |
+          ls
+          pwd
+          cd build
+          ls
+          pwd
+          cd ../../
+          ls
+          pwd
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
